...
        headerTintColor: colors.stone[900],
      }}
    >
      <Tabs.Screen
        name="chat"
        options={{
          title: "Chat",
          tabBarIcon: ({ color }) => (
            <SymbolView
              name={{ ios: "bubble.left.fill" }}
              tintColor={color}
              size={24}
            />
...
        }}
      />
      <Tabs.Screen
        name="dashboard"
        options={{
          headerShown: false,
          title: "Dashboard",
          tabBarIcon: ({ color }) => (
            <SymbolView
              name={{ ios: "chart.bar.fill" }}
              tintColor={color}
              size={24}
            />
...
